--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^0.1.3
   polygon_clipper: ^1.0.2
+  get_it: ^4.0.4
 
 dev_dependencies:
   flutter_test:
