--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   cupertino_icons: ^0.1.3
   polygon_clipper: ^1.0.2
   get_it: ^4.0.4
+  eva_icons_flutter: ^2.0.1
 
 dev_dependencies:
   flutter_test:
