--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   polygon_clipper: ^1.0.2
   get_it: ^4.0.4
   eva_icons_flutter: ^2.0.1
+  charts_flutter: ^0.9.0
 
 dev_dependencies:
   flutter_test:
