--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,7 @@ dependencies:
   polygon_clipper: ^1.0.2
   get_it: ^4.0.4
   eva_icons_flutter: ^2.0.1
-  charts_flutter: ^0.9.0
+  syncfusion_flutter_charts: ^18.2.57
 
 dev_dependencies:
   flutter_test:
@@ -46,19 +46,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/users/
-  #   - images/a_dot_ham.jpeg
-
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware.
-
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/assets-and-images/#from-packages
-
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
+    - keys.json
   fonts:
     - family: Gilroy
       fonts:
